--- a/FlashyQuiz/Base.lproj/Main.storyboard
+++ b/FlashyQuiz/Base.lproj/Main.storyboard
@@ -800,7 +800,7 @@
             </objects>
             <point key="canvasLocation" x="6771.7557251908393" y="1555.6338028169014"/>
         </scene>
-        <!--Edit Flash Card View Controller-->
+        <!--Modify FlashCard-->
         <scene sceneID="ytU-xX-lnr">
             <objects>
                 <viewController id="4Qc-Fy-gpK" customClass="EditFlashCardViewController" customModule="FlashyQuiz" customModuleProvider="target" sceneMemberID="viewController">
@@ -808,23 +808,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cdh-Wu-Xwy">
-                                <rect key="frame" x="69" y="171" width="255" height="34"/>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter new Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cdh-Wu-Xwy">
+                                <rect key="frame" x="32" y="171" width="313" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Uzu-xT-CZy">
-                                <rect key="frame" x="326" y="304" width="49" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </switch>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="lYl-FN-cfz">
-                                <rect key="frame" x="0.0" y="387" width="393" height="315"/>
+                                <rect key="frame" x="0.0" y="306" width="393" height="396"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Do you want this deck to be public?" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AIp-4D-6Mj">
-                                <rect key="frame" x="16" y="309" width="287" height="21"/>
+                                <rect key="frame" x="32" y="261" width="287" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -842,11 +838,22 @@
                                     <action selector="saveButtonTapped:" destination="4Qc-Fy-gpK" eventType="touchUpInside" id="xJ9-tb-SqQ"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="FlashCard Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aOg-fq-LOy">
+                                <rect key="frame" x="32" y="142" width="123" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Uzu-xT-CZy">
+                                <rect key="frame" x="327" y="256" width="49" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </switch>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="st7-Lh-t85"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" id="bJB-cR-ICA"/>
+                    <navigationItem key="navigationItem" title="Modify FlashCard" id="bJB-cR-ICA"/>
                     <connections>
                         <outlet property="modifyTableView" destination="lYl-FN-cfz" id="pPx-Vv-ZpW"/>
                         <outlet property="privacySwitch" destination="Uzu-xT-CZy" id="5Sq-wP-TUj"/>
@@ -1314,7 +1321,7 @@
             </objects>
             <point key="canvasLocation" x="6643.5114503816794" y="-873.23943661971839"/>
         </scene>
-        <!--Modify Quiz View Controller-->
+        <!--Modify Quiz-->
         <scene sceneID="VCP-bi-mzy">
             <objects>
                 <viewController modalPresentationStyle="fullScreen" id="FM5-nY-OEZ" customClass="ModifyQuizViewController" customModule="FlashyQuiz" customModuleProvider="target" sceneMemberID="viewController">
@@ -1345,13 +1352,6 @@
                                     <color key="baseBackgroundColor" systemColor="systemGreenColor"/>
                                 </buttonConfiguration>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Modify Quiz" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9hG-h8-fWF">
-                                <rect key="frame" x="127" y="85" width="146" height="32"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Quiz Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hXw-vj-LL9">
                                 <rect key="frame" x="33" y="125" width="77" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -1388,7 +1388,7 @@
                         <viewLayoutGuide key="safeArea" id="VEI-fz-oih"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
-                    <navigationItem key="navigationItem" id="ZwD-uL-zCK"/>
+                    <navigationItem key="navigationItem" title="Modify Quiz" id="ZwD-uL-zCK"/>
                     <connections>
                         <outlet property="modifyTableView" destination="nyG-5C-0rr" id="1c9-rV-Svg"/>
                         <outlet property="privacySwitch" destination="zoc-Sv-ce7" id="Sap-Z8-Vr2"/>
